# Notes

atlimg/: .gitignore  README.md  atlimg.pro  main.cpp
benchmark/: .gitignore  benchmark.pro  main.cpp  profiler.h  readme.md
elapsedtime/: CMakeLists.txt  ElapsedTime.cpp  ElapsedTime.h  main.cpp
warptext/: readme.md  warptext.qml
